Date	Added
2007/02/16
	* Collapsed config settings "sg_miracle_skill_min_duration" and
	  "sg_miracle_skill_max_duration" into "sg_miracle_skill_duration", which
	  defaults to an hour (skill.conf).
2007/02/12
	* Corrected the meaning of "skill_display_fail&2", made 2 the default
	  setting. [Skotlex]
2007/02/08
	* Since the mysql ping interval is now autoconfigured, removed
	the connection_ping_interval config setting in inter_athena.conf
2007/02/01
	* Improved a bit the description of the mvp item get time config settings.
2007/01/29
	* Collapsed config settings produce_item_name_input,
	  produce_potion_name_input, making_arrow_name_input, holywater_name_input,
	  cdp_name_input into a single config produce_item_name_input which uses
	  bitmasks to determine what it affects. See battle/item.conf for details.
	* Updated arrow_decrement to have 3 possible values: Disabled, Enabled, and
	  Enabled + Autoguess (gives arrow consumption as appropiate to
	  plagiarized/acquired skills). eA previously had a hardcoded '2' setting,
	  now it's 1 by default as it should be. [Skotlex]
2007/01/28
	* Fixed the description of @summon
	* Fixed @nuke's position (I edited the wrong file by accident)
2007/01/27
	* Atcommand fixup [ultramage]
	- removed atcommands @w, @server_date/time, @red, @happyhappyjoyjoy, @shuffle
	- synced gm level of @jailfor, @charjailtime, @npcmove, @chardropall,
	  @charstoreall, @send, @mute, @changelook, @exp and @nuke
	- added conf entries for @whozeny, @kamic, @tonpc, @petid, @identify, @adopt,
	  @trade, @changelook, @send
	- reorganized the atcommands a bit
2007/01/26
	* Added battle config hom_rename (homunc.txt) to enable renaming the
	  homunculus multiple times. Defaults to no.
2007/01/22
	* Moved the homunculus setting from pet.conf to homunc.conf [Skotlex]
2007/01/12
	* Updated the information about ip rules and DDoS protection in 
	  packet_athena.conf and commented out the line "allow: all" so 