@@ -4,6 +4,11 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/03/05
+	* More tweaks to socket.c to simplify the code [ultramage]
+	- many generic cleanups - reformatting, useless code removal, etc
+	- made the mode_neg setting a compile-time decision, not a run-time one
+	- removed the silly frame_size setting (there since r1)
+	- added some TODOs to http://www.eathena.ws/board/index.php?showtopic=127988
 	* Added the +20hit that were missing the NPC elemental attack skills.
 	* Added support for autospells using "a random skill level". The last value
 	  of bonus4 bAutoSpell is used for determining this as well as the target. &1
